# bogota-apartments

./: .gitignore  pyproject.toml
ETL/: 04_data_save.py
bogota_apartments/: pipelines.py  settings.py
bogota_apartments/spiders/: habi.py  metrocuadrado.py
notebooks/: arriendo_data_exploratory.ipynb  mapa.ipynb  venta_data_exploraty.ipynb
visualizations/: heatmap.html  lattice_map.html  lattice_map_quantile.html
