[tool.poetry]
name = "bogota-apartments"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
humanize = "^4.10.0"
Unidecode = "^1.3.8"
plotly = "^5.24.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
requests = "^2.32.3"
seaborn = "^0.13.2"
session-info = "^1.0.0"
shapely = "^2.0.6"
geopandas = "^1.0.1"
fake-useragent = "^1.5.1"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"
Scrapy = "^2.11.2"
scrapyd = "^1.4.3"
dnspython = "^2.6.1"
nbformat = "^5.10.4"
selenium = "^4.24.0"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
